--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,22 @@
-.circle{
+circle{
     fill: #b63082 !important;
 }
+path{
+    fill: #fff !important;
+}
+.app__logo{
+    justify-content: center !important;
+}
+.app__logo-img{
+    max-width: 55% !important;
+    max-height: 100px !important;
+}
+.tree__image{
+    width: 100% !important;
+    max-width: 400px !important;
+    height: auto !important;
+    margin: 20px !important;
+}
+#buttonNoBgColor{
+    background-color: #a554b7 !important;
+} 
