--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,14 @@
-/* circle{
-    fill: #b63082 !important;
-} */
+@media (max-width: 700px) {
+    .tree__image{
+      /* max-width: 20% !important; */
+      width: 30% !important;
+    }
+}
+.welcome{
+    justify-content: initial !important;
+    padding: 30px 0px !important;
+}
+
 [fill="#ddd"]{
     fill: #b63082 !important;
 }
@@ -12,15 +20,14 @@ path{
     padding-bottom:20px;
 }
 .app__logo-img{
-    max-width: 55% !important;
+    max-width: 30% !important;
     max-height: 100px !important;
 }
 .tree__image{
-    width: 100% !important;
-    max-width: 400px !important;
+    width: 70% !important;
     height: auto !important;
-    margin: 20px !important;
+    vertical-align: middle !important;
 }
-#buttonNoBgColor{
+/* #buttonNoBgColor{
     background-color: #a554b7 !important;
-} 
+}  */
